switch to Java 12